--- a/locale/pl/bobenemies.cfg
+++ b/locale/pl/bobenemies.cfg
@@ -23,62 +23,62 @@ small-alien-artifact-purple=Mały fioletowy obcy artefakt
 
 
 [entity-name]
-bob-biter-spawner=Elemental biter Spawner
-bob-biter-spawner-corpse=Elemental biter spawner zwłoki
-bob-spitter-spawner=Elemental spitter spawner
-bob-spitter-spawner-corpse=Elemental spitter spawner zwłoki
+bob-biter-spawner=Elementalny Spawner kąsaczy
+bob-biter-spawner-corpse=Elementalny spawner zwłok kąsaczy
+bob-spitter-spawner=Elementalny spawner spluwaczy
+bob-spitter-spawner-corpse=Elementalny spawner zwłok spluwaczy
 
-bob-big-piercing-biter=Big piercing biter
-bob-big-piercing-biter-corpse=Big piercing biter zwłoki
-bob-huge-acid-biter=Huge acidic biter
-bob-huge-acid-biter-corpse=Huge acidic biter zwłoki
-bob-huge-explosive-biter=Huge explosive biter
-bob-huge-explosive-biter-corpse=Huge explosive biter zwłoki
-bob-giant-poison-biter=Giant poisonous biter
-bob-giant-poison-biter-corpse=Giant poisonous biter zwłoki
-bob-giant-fire-biter=Giant fiery biter
-bob-giant-fire-biter-corpse=Giant fiery biter zwłoki
-bob-titan-biter=Titan biter
-bob-titan-biter-corpse=Titan biter zwłoki
-bob-behemoth-biter=Badass behemoth biter
-bob-behemoth-biter-corpse=Badass behemoth biter zwłoki
-bob-leviathan-biter=Leviathan biter
-bob-leviathan-biter-corpse=Leviathan biter zwłoki
+bob-big-piercing-biter=Duży kłujący kąsacz
+bob-big-piercing-biter-corpse=Zwłoki dużego kłującego kąsacza
+bob-huge-acid-biter=ogromny kwasowy kąsacz
+bob-huge-acid-biter-corpse=zwłoki dużego kwasowego kąsacza
+bob-huge-explosive-biter=Duży wybuchowy kąsacz
+bob-huge-explosive-biter-corpse=Zwłoki dużego wybuchowego kąsacza
+bob-giant-poison-biter=Gigantyczny trujący kąsacz
+bob-giant-poison-biter-corpse=Zwłoki gigantycznego trującego kąsacza
+bob-giant-fire-biter=Gigantyczny ognisty kąsacz
+bob-giant-fire-biter-corpse=Zwłoki gigantycznego ognistego kąsacza
+bob-titan-biter=Tytanowy kąsacz
+bob-titan-biter-corpse=Zwłoki tytanowego kąsacza
+bob-behemoth-biter=Kąsacz behemot
+bob-behemoth-biter-corpse=Zwłoki kąsacza behemota
+bob-leviathan-biter=Kąsacz lewiatan
+bob-leviathan-biter-corpse=Zwłoki kąsacza lewiatana
 
-bob-big-electric-spitter=Big electric spitter
-bob-big-electric-spitter-corpse=Big electric spitter zwłoki
-bob-huge-explosive-spitter=Huge explosive spitter
-bob-huge-explosive-spitter-corpse=Huge explosive spitter zwłoki
-bob-huge-acid-spitter=Huge acid spitter
-bob-huge-acid-spitter-corpse=Huge acid spitter zwłoki
-bob-giant-fire-spitter=Giant fire spitter
-bob-giant-fire-spitter-corpse=Giant fire spitter zwłoki
-bob-giant-poison-spitter=Giant poison spitter
-bob-giant-poison-spitter-corpse=Giant poison spitter zwłoki
-bob-titan-spitter=Titan spitter
-bob-titan-spitter-corpse=Titan spitter zwłoki
-bob-behemoth-spitter=Badass behemoth spitter
-bob-behemoth-spitter-corpse=Badass behemoth spitter zwłoki
-bob-leviathan-spitter=Leviathan spitter
-bob-leviathan-spitter-corpse=Leviathan spitter zwłoki
+bob-big-electric-spitter=Duży elektryczny spluwacz
+bob-big-electric-spitter-corpse=Zwłoki dużego elektrycznego spluwacza
+bob-huge-explosive-spitter=Ogromny wybuchowy spluwacz
+bob-huge-explosive-spitter-corpse=Zwłoki ogromnego wybuchowego spluwacza
+bob-huge-acid-spitter=Ogromny kwasowy spluwacz
+bob-huge-acid-spitter-corpse=Zwłoki ogromnego kwasowego spluwacza
+bob-giant-fire-spitter=Gigantyczny ognisty spluwacz
+bob-giant-fire-spitter-corpse=Zwłoki gigantycznego ognistego spluwacza
+bob-giant-poison-spitter=Gigantyczny trujący spluwacz
+bob-giant-poison-spitter-corpse=Zwłoki gigantycznego trującego spluwacza
+bob-titan-spitter=Spluwacz tytan
+bob-titan-spitter-corpse=Zwłoki spluwacza tytana
+bob-behemoth-spitter=Spluwacz behemot
+bob-behemoth-spitter-corpse=Zwłoki spluwacza behemota
+bob-leviathan-spitter=Spluwacz lewiatan
+bob-leviathan-spitter-corpse=Zwłoki spluwacza lewiatana
 
-bob-big-piercing-worm-turret=Big piercing robak
-bob-big-piercing-worm-corpse=Big piercing robak zwłoki
-bob-big-electric-worm-turret=Big electric robak
-bob-big-electric-worm-corpse=Big electric robak zwłoki
-big-worm-turret=Big acid robak
-big-worm-corpse=Big acid robak zwłoki
-bob-big-explosive-worm-turret=Big explosive robak
-bob-big-explosive-worm-corpse=Big explosive robak zwłoki
-bob-big-fire-worm-turret=Big fire robak
-bob-big-fire-worm-corpse=Big fire robak zwłoki
-bob-big-poison-worm-turret=Big poison robak
-bob-big-poison-worm-corpse=Big poison robak zwłoki
+bob-big-piercing-worm-turret=Duży kłujączy robak
+bob-big-piercing-worm-corpse=zwłoki dużego kłującego robaka
+bob-big-electric-worm-turret=Duży elektryczny robak
+bob-big-electric-worm-corpse=zwłoki dużego elektrycznego robaka
+big-worm-turret=Duży kwasowy robak
+big-worm-corpse=zwłoki dużego kwasowego robaka
+bob-big-explosive-worm-turret=Duży wybuchowy robak
+bob-big-explosive-worm-corpse=zwłoki dużego wybuchowego robaka
+bob-big-fire-worm-turret=Duży ognisty robak robak
+bob-big-fire-worm-corpse=zwłoki duzego ognistego robaka
+bob-big-poison-worm-turret=Duży trujący robak
+bob-big-poison-worm-corpse=zwłoki dużego trującego robaka
 
-bob-giant-worm-turret=Giant robak
-bob-giant-worm-corpse=Giant robak zwłoki
-bob-behemoth-worm-turret=Behemoth robak
-bob-behemoth-worm-corpse=Behemoth robak zwłoki
+bob-giant-worm-turret=Gigantyczny robak
+bob-giant-worm-corpse=Zwłoki gigantycznego robaka
+bob-behemoth-worm-turret=Robak behemot
+bob-behemoth-worm-corpse=Zwłoki robaka behemota
 
 
 [damage-type-name]
