--- a/locale/pl/bobmining.cfg
+++ b/locale/pl/bobmining.cfg
@@ -23,26 +23,26 @@ water-miner-5=Kiwon wodny MK5
 
 
 [item-name]
-bob-mining-drill-1=__ENTITY__bob-mining-drill-1__
-bob-mining-drill-2=__ENTITY__bob-mining-drill-2__
-bob-mining-drill-3=__ENTITY__bob-mining-drill-3__
-bob-mining-drill-4=__ENTITY__bob-mining-drill-4__
+bob-mining-drill-1=__JEDNOSTKA__Elektryczna wiertnica MK2__
+bob-mining-drill-2=__JEDNOSTKA__Elektryczna wiertnica MK3__
+bob-mining-drill-3=__JEDNOSTKA__Elektryczna wiertnica MK4__
+bob-mining-drill-4=__JEDNOSTKA__Elektryczna wiertnica MK5__
 
-bob-area-mining-drill-1=__ENTITY__bob-area-mining-drill-1__
-bob-area-mining-drill-2=__ENTITY__bob-area-mining-drill-2__
-bob-area-mining-drill-3=__ENTITY__bob-area-mining-drill-3__
-bob-area-mining-drill-4=__ENTITY__bob-area-mining-drill-4__
+bob-area-mining-drill-1=__JEDNOSTKA__Obszarowa Elektryczna wiertnica MK2__
+bob-area-mining-drill-2=__JEDNOSTKA__Obszarowa Elektryczna wiertnica MK3__
+bob-area-mining-drill-3=__JEDNOSTKA__Obszarowa Elektryczna wiertnica MK4__
+bob-area-mining-drill-4=__JEDNOSTKA__Obszarowa Elektryczna wiertnica MK5__
 
-bob-pumpjack-1=__ENTITY__bob-pumpjack-1__
-bob-pumpjack-2=__ENTITY__bob-pumpjack-2__
-bob-pumpjack-3=__ENTITY__bob-pumpjack-3__
-bob-pumpjack-4=__ENTITY__bob-pumpjack-4__
+bob-pumpjack-1=__JEDNOSTKA__Kiwon MK2__
+bob-pumpjack-2=__JEDNOSTKA__Kiwon MK3__
+bob-pumpjack-3=__JEDNOSTKA__Kiwon MK4__
+bob-pumpjack-4=__JEDNOSTKA__Kiwon MK5__
 
-water-miner-1=__ENTITY__water-miner-1__
-water-miner-2=__ENTITY__water-miner-2__
-water-miner-3=__ENTITY__water-miner-3__
-water-miner-4=__ENTITY__water-miner-4__
-water-miner-5=__ENTITY__water-miner-5__
+water-miner-1=__JEDNOSTKA__Kiwon wodny MK1__
+water-miner-2=__JEDNOSTKA__Kiwon wodny MK2__
+water-miner-3=__JEDNOSTKA__Kiwon wodny MK3__
+water-miner-4=__JEDNOSTKA__Kiwon wodny MK4__
+water-miner-5=__JEDNOSTKA__Kiwon wodny MK5__
 
 brass-axe=Mosiężny topór	
 cobalt-axe=Kobaltowy topór
@@ -67,11 +67,11 @@ bobmods-mining-waterminers=Kiwony do wydobycia wód gruntowych
 
 
 [mod-setting-description]
-bobmods-mining-miningdrills=If set to true, new upgradable mining drills are available.
-bobmods-mining-areadrills=If set to true, new upgradable large area mining drills are available.
-bobmods-mining-pumpjacks=If set to true, new upgradable pumpjacks are available.
-bobmods-mining-miningaxes=If set to true, new better mining axes are available.
-bobmods-mining-waterminers=If set to true, water mining pumpjacks are available.
+bobmods-mining-miningdrills=Jeśli włączone, nowe ulepszone Elektryczne wiertnice są dostępne.
+bobmods-mining-areadrills=Jeśli włączone, nowe ulepszone duże Obszarowe Elektryczne wiertnice są dostępne.
+bobmods-mining-pumpjacks=Jeśli włączone, nowe ulepszone kiwony są dostępne.
+bobmods-mining-miningaxes=Jeśli włączone, nowe lepsze topory wydobywcze są dostępne.
+bobmods-mining-waterminers=Jeśli włączone, Kiwony wodne są dostępne.
 
 
 
